--- a/src/AppSemTemplate/Modulos/Vendas/Views/Shared/_Layout.cshtml
+++ b/src/AppSemTemplate/Modulos/Vendas/Views/Shared/_Layout.cshtml
@@ -26,7 +26,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                     </ul>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Vendas" asp-controller="Gestao" asp-action="Detalhes" asp-route-id="1">Teste Pedido</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
