Atualizações - Model e Upload Arquivos - 15030931

--- a/src/AppSemTemplate/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/src/AppSemTemplate/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -5,8 +5,8 @@
 }
 
 <header>
-    <h1 class="text-danger">@ViewData["Title"]</h1>
-    <p class="text-danger">Você não tem permissão para acessar este recurso.</p>
+    <h1 class="text-primary-emphasis">@ViewData["Title"]</h1>
+    <h2 class="text-danger">Você não tem permissão para fazer isso.</h2>
     <div class="form-group">
         <a asp-action="Index" class="btn btn-warning">Voltar</a>
     </div>
